[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/pvp_challenge_ui.gd" id="1"]

[node name="PvPChallengeUI" type="CanvasLayer"]
layer = 15
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Player challenges you!"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="AcceptButton" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "Accept"

[node name="DeclineButton" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "Decline"
